add documentação para o endpoint de informações dos clientes
